discussion/kv_engine/162085/162085_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39815: Add basic SyncWrite timeout test (ep_testsuite)

Change-Id: I398b145338b358bc4707602d7e08597736b22281

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-09-22 14:00:55.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-22 14:37:38.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40257/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\ep_testsuite.cc(8207): error C2398: Element "1": conversion from "const int" to "uint16_t" requires a narrowing conversion ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40257/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12711/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite.cc:8189:11: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    const char meta[] = R"({"topology":[["active", "replica"]]})";
          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12711/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15088/ : FAILURE

ThreadSanitizer issue: data race ../kv_engine/programs/engine_testapp/mock_cookie.h:88 in MockCookie::setEngineStorage(void*)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15088/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34269/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11501/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22593/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13469/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2383/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2350/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14326/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14580/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
